--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Mapas/Maze_01.Maze_01
+GameDefaultMap=/Game/Mapas/Tutorial_Movimiento_01.Tutorial_Movimiento_01
 EditorStartupMap=/Game/Mapas/Maze_01.Maze_01
 GlobalDefaultGameMode=/Game/Blueprints/BP_LL_GameModeBase.BP_LL_GameModeBase_C
 GameInstanceClass=/Game/Blueprints/BP_LL_GameInstance.BP_LL_GameInstance_C
