--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Mapas/Sandbox_Maps.Sandbox_Maps
-EditorStartupMap=/Game/Mapas/Sandbox_Maps.Sandbox_Maps
+GameDefaultMap=/Game/Mapas/TestLevel_01.TestLevel_01
+EditorStartupMap=/Game/Mapas/TestLevel_01.TestLevel_01
 GlobalDefaultGameMode=/Game/Blueprints/BP_LL_GameModeBase.BP_LL_GameModeBase_C
 GameInstanceClass=/Game/Blueprints/BP_LL_GameInstance.BP_LL_GameInstance_C
 
@@ -16,4 +16,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/LittleLights")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/LittleLights")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="LittleLightsGameModeBase")
+
+[/Script/Engine.RendererSettings]
+r.GenerateMeshDistanceFields=True
 
