3d trees from isaac change of fov when light is turning off

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -87,6 +87,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="InteractInput",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
 +ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftThumbstick)
 +ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="PuzzleDebug",bShift=True,bCtrl=False,bAlt=False,bCmd=False,Key=Four)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="LookUpRate",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
