--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -19,4 +19,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
+r.MobileMSAA=2
 
