--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Mapas/TestLevel_02.TestLevel_02
-EditorStartupMap=/Game/Mapas/TestLevel_02.TestLevel_02
+EditorStartupMap=/Game/Mapas/Tutorials/Tutorial_B_02.Tutorial_B_02
 GlobalDefaultGameMode=/Game/Blueprints/BP_LL_GameModeBase.BP_LL_GameModeBase_C
 GameInstanceClass=/Game/Blueprints/BP_LL_GameInstance.BP_LL_GameInstance_C
 
