--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,8 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=418A5A7A4A7A1C084FFA098B466C99A5
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+bSkipEditorContent=True
+
