--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -20,4 +20,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
 r.MobileMSAA=2
+r.DefaultFeature.AutoExposure=False
 
