--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,4 +5,5 @@ ProjectID=418A5A7A4A7A1C084FFA098B466C99A5
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Shipping
 bSkipEditorContent=True
+bCompressed=True
 
