AI Beast Updated: Patroling & Chasing
-Patroling behaviour correct
-Chasing behaviour correct

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -111,5 +111,5 @@ DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=None
 -ConsoleKeys=Tilde
-+ConsoleKeys=None
++ConsoleKeys=|
 
