--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -98,6 +98,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Keyboard",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
 +ActionMappings=(ActionName="Keyboard",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
 +ActionMappings=(ActionName="Keyboard",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
++ActionMappings=(ActionName="Vault",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=V)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="LookUpRate",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
