New intro of Menu

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -21,7 +21,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 r.GenerateMeshDistanceFields=True
 r.MobileMSAA=2
 r.DefaultFeature.AutoExposure=False
-
+r.Lumen.TraceMeshSDFs=1
+r.ReflectionMethod=1
+r.DynamicGlobalIlluminationMethod=1
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/LittleLights.LL_Tottem.TottemPieces",NewName="/Script/LittleLights.LL_Tottem.TotemPieces")
