Beast AI updated, basic behavior kind of working

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -3,6 +3,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=418A5A7A4A7A1C084FFA098B466C99A5
 
+[/Script/AIModule.AISense_Sight]
+bAutoRegisterAllawnsAsSources=false
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_DebugGame
