--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -69,6 +69,7 @@ bUseMouseForTouch=False
 bEnableMouseSmoothing=True
 bEnableFOVScaling=True
 bCaptureMouseOnLaunch=True
+bEnableLegacyInputScales=True
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 bEnableGestureRecognizer=False
@@ -122,5 +123,5 @@ DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=None
 -ConsoleKeys=Tilde
-+ConsoleKeys=None
++ConsoleKeys=|
 
