--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -28,6 +28,7 @@ r.DynamicGlobalIlluminationMethod=1
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/LittleLights.LL_Tottem.TottemPieces",NewName="/Script/LittleLights.LL_Tottem.TotemPieces")
 +PropertyRedirects=(OldName="/Script/LittleLights.TottemPieceState.TottemPice",NewName="/Script/LittleLights.TottemPieceState.TotemPice")
++PropertyRedirects=(OldName="/Script/LittleLights.LL_Ability.RemainingLightTime",NewName="/Script/LittleLights.LL_Ability.RemainingActionTime")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
