AI | new teleport behavior for the beast

--- a/LittleLights.uproject
+++ b/LittleLights.uproject
@@ -64,6 +64,10 @@
 		{
 			"Name": "ModelingToolsEditorMode",
 			"Enabled": true
+		},
+		{
+			"Name": "CommonUI",
+			"Enabled": true
 		}
 	]
 }
