--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,6 +16,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/LittleLights")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/LittleLights")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="LittleLightsGameModeBase")
+GameViewportClientClassName=/Script/CommonUI.CommonGameViewportClient
 
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
