--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -6,6 +6,7 @@ FastReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Action.Inmune",DevComment="For making the player inmune to the beast attacks")
 +GameplayTagList=(Tag="Action.Refilling",DevComment="")
 +GameplayTagList=(Tag="Action.RollingForward",DevComment="")
 +GameplayTagList=(Tag="Action.Sprinting",DevComment="")
