--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -75,6 +75,7 @@ r.DynamicGlobalIlluminationMethod=1
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="Wall")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Overlap,bTraceType=False,bStaticObject=False,Name="OrbArea")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="OccludedObject")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="Fog")
 +EditProfiles=(Name="BlockAll",CustomResponses=((Channel="Wall",Response=ECR_Ignore)))
 +EditProfiles=(Name="BlockAllDynamic",CustomResponses=((Channel="Wall",Response=ECR_Overlap)))
 +EditProfiles=(Name="OverlapAllDynamic",CustomResponses=((Channel="Wall",Response=ECR_Overlap)))
@@ -135,4 +136,7 @@ GatheringNavModifiersWarningLimitTime=-1.000000
 +SupportedAgents=(Name="Beast",Color=(B=0,G=56,R=75,A=164),DefaultQueryExtent=(X=50.000000,Y=50.000000,Z=250.000000),NavDataClass="/Script/NavigationSystem.RecastNavMesh",AgentRadius=150.000000,AgentHeight=500.000000,AgentStepHeight=-1.000000,NavWalkingSearchHeightScale=0.500000,PreferredNavData="/Script/NavigationSystem.RecastNavMesh",bCanCrouch=False,bCanJump=False,bCanWalk=True,bCanSwim=False,bCanFly=False)
 SupportedAgentsMask=(bSupportsAgent0=True,bSupportsAgent1=True,bSupportsAgent2=True,bSupportsAgent3=True,bSupportsAgent4=True,bSupportsAgent5=True,bSupportsAgent6=True,bSupportsAgent7=True,bSupportsAgent8=True,bSupportsAgent9=True,bSupportsAgent10=True,bSupportsAgent11=True,bSupportsAgent12=True,bSupportsAgent13=True,bSupportsAgent14=True,bSupportsAgent15=True)
 DirtyAreasUpdateFreq=60.000000
+
+[/Script/Engine.PhysicsSettings]
+bSupportUVFromHitResults=True
 
