--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -31,6 +31,8 @@ r.DynamicGlobalIlluminationMethod=1
 +PropertyRedirects=(OldName="/Script/LittleLights.TottemPieceState.TottemPice",NewName="/Script/LittleLights.TottemPieceState.TotemPice")
 +PropertyRedirects=(OldName="/Script/LittleLights.LL_Ability.RemainingLightTime",NewName="/Script/LittleLights.LL_Ability.RemainingActionTime")
 +PropertyRedirects=(OldName="/Script/LittleLights.LL_DialogueComponent.DialogueDT",NewName="/Script/LittleLights.LL_DialogueComponent.DialoguesDT")
++PropertyRedirects=(OldName="/Script/LittleLights.PlayerCharacter.IAInteract",NewName="/Script/LittleLights.PlayerCharacter.Interact_IA")
++PropertyRedirects=(OldName="/Script/LittleLights.PlayerCharacter.MoveForward",NewName="/Script/LittleLights.PlayerCharacter.MoveForward_IA")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
