Save System WIP and New Level 2

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -33,6 +33,7 @@ r.DynamicGlobalIlluminationMethod=1
 +PropertyRedirects=(OldName="/Script/LittleLights.LL_DialogueComponent.DialogueDT",NewName="/Script/LittleLights.LL_DialogueComponent.DialoguesDT")
 +PropertyRedirects=(OldName="/Script/LittleLights.PlayerCharacter.IAInteract",NewName="/Script/LittleLights.PlayerCharacter.Interact_IA")
 +PropertyRedirects=(OldName="/Script/LittleLights.PlayerCharacter.MoveForward",NewName="/Script/LittleLights.PlayerCharacter.MoveForward_IA")
++StructRedirects=(OldName="/Script/LittleLights.LLGameSave",NewName="/Script/LittleLights.LLGameSaveData")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
