New common inputs logic
-Also Tutorial B recovered
-Added new ribbon

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,6 +5,7 @@ ProjectID=418A5A7A4A7A1C084FFA098B466C99A5
 
 [/Script/AIModule.AISense_Sight]
 bAutoRegisterAllawnsAsSources=false
+
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_DebugGame
@@ -95,4 +96,14 @@ bSkipMovies=False
 PerPlatformBuildConfig=()
 PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
 PerPlatformBuildTarget=()
+
+[CommonInputPlatformSettings_Windows CommonInputPlatformSettings]
+DefaultInputType=MouseAndKeyboard
+bSupportsMouseAndKeyboard=True
+bSupportsTouch=False
+bSupportsGamepad=True
+DefaultGamepadName=Generic
+bCanChangeGamepadType=True
++ControllerData=/Game/Blueprints/Input/KeyboardControllerData.KeyboardControllerData_C
++ControllerData=/Game/Blueprints/Input/GamepadControllerData1.GamepadControllerData1_C
 
