--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,6 +2,9 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=418A5A7A4A7A1C084FFA098B466C99A5
+CompanyName=Parallels Games
+CompanyDistinguishedName=Parallesl Games
+bUseBorderlessWindow=True
 
 [/Script/AIModule.AISense_Sight]
 bAutoRegisterAllawnsAsSources=false
