--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -13,8 +13,6 @@ bAutoRegisterAllawnsAsSources=false
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_DebugGame
 BuildTarget=
-LaunchOnTarget=
-StagingDirectory=(Path="D:/ParallelsGames/LittleLights/ProyectoUE4/Builds/LL_v0.1a")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -32,6 +30,8 @@ bForceOneChunkPerFile=False
 MaxChunkSize=0
 bBuildHttpChunkInstallData=False
 HttpChunkInstallDataDirectory=(Path="")
+WriteBackMetadataToAssetRegistry=Disabled
+bWritePluginSizeSummaryJsons=False
 bCompressed=True
 PackageCompressionFormat=Oodle
 bForceUseProjectCompressionFormatIgnoreHardwareOverride=False
@@ -58,7 +58,7 @@ InternationalizationPreset=English
 LocalizationTargetCatchAllChunkId=0
 bCookAll=False
 bCookMapsOnly=False
-bSkipEditorContent=True
+bSkipEditorContent=False
 bSkipMovies=False
 -IniKeyDenylist=KeyStorePassword
 -IniKeyDenylist=KeyPassword
@@ -76,7 +76,8 @@ bSkipMovies=False
 -IniKeyDenylist=SigningCertificate
 -IniKeyDenylist=MobileProvision
 -IniKeyDenylist=IniKeyDenylist
--IniKeyDenylist=IniSectionBlacklist
+-IniKeyDenylist=IniSectionDenylist
++IniKeyDenylist=IniSectionDenylist
 +IniKeyDenylist=KeyStorePassword
 +IniKeyDenylist=KeyPassword
 +IniKeyDenylist=rsa.privateexp
@@ -95,10 +96,12 @@ bSkipMovies=False
 +IniKeyDenylist=IniKeyDenylist
 +IniKeyDenylist=IniSectionBlacklist
 -IniSectionDenylist=HordeStorageServers
+-IniSectionDenylist=StorageServers
++IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
-PerPlatformBuildConfig=()
-PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
-PerPlatformBuildTarget=()
++DirectoriesToNeverCook=(Path="/Game/StarterContent")
+bRetainStagedDirectory=False
+CustomStageCopyHandler=
 
 [CommonInputPlatformSettings_Windows CommonInputPlatformSettings]
 DefaultInputType=MouseAndKeyboard
