--- a/LittleLights.uproject
+++ b/LittleLights.uproject
@@ -72,6 +72,10 @@
 		{
 			"Name": "SkeletalMeshModelingTools",
 			"Enabled": true
+		},
+		{
+			"Name": "OneClickControlRig",
+			"Enabled": true
 		}
 	]
 }
