--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@
 *.VC.db
 *.VC.opendb
 
+
 # Precompiled Assets
 SourceArt/**/*.png
 SourceArt/**/*.tga
@@ -76,3 +77,7 @@ DerivedDataCache/*
 
 s
 /Plugins/Developer/RiderLink/
+
+.idea/*
+/.idea
+/.idea/.idea.LittleLights.dir
